--- a/styles/globals.css
+++ b/styles/globals.css
@@ -82,18 +82,43 @@
 html,
 body {
   max-width: 100vw;
+  width: 100vw;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: row;
 }
 
 body {
+  color: rgb(var(--foreground-rgb));
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
 }
+
+.rightsection{
+  background-color: #F0F0F0;
+  flex: 1;
+  text-align: center;
+  overflow-y: none;
+  display: flex;
+  flex-direction: column;
+}
+
+.rightsection section{
+  height: calc(100vh - 80px) !important;
+  overflow-y: auto;
+}
+
 
 a {
   color: inherit;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
