--- a/styles/createquiz.module.css
+++ b/styles/createquiz.module.css
@@ -45,3 +45,64 @@
 .TEST{
     color:black;
 }
+
+
+.modalbackdrop{
+    display: none;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    top:0;
+    left:0;
+    z-index: 100;
+  }
+  
+  .modalbackdrop.active{
+    display: flex;
+    justify-content: center; /* Horizontally centers items */
+    align-items: center; /* Vertically centers items */
+  }
+
+  .loadingimage{
+    position: absolute;
+    animation: shake 2s ease-in-out infinite; /* Apply the animation */
+    animation-iteration-count: 1
+  }
+
+  .loadingimage img{
+    height: 500px;
+  }
+
+
+  .lightbulbon{
+    animation: fadeIn 1s ease-in-out ; /* Apply the animation */
+  }
+
+
+  .quizreadytext{
+    bottom: 100px;
+  }
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+
+  @keyframes shake {
+    0%, 100% {
+      transform: translateX(0);
+    }
+    10%, 30%, 50%, 70%, 90% {
+      transform: translateX(-10px) rotate(10deg);
+    }
+    20%, 40%, 60%, 80% {
+      transform: translateX(10px) rotate(5deg);
+    }
+  }
+  
